<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dip" >
    
    <TextView
        android:id="@+id/regitserWelcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="20dip"
        android:text="@string/register_welcome_label_text" />

    <TextView
        android:id="@+id/regitserUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_username_label_text" />

    <EditText
        android:id="@+id/registerUsernameEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/registerPswLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_psw_label_text" />

    <EditText
        android:id="@+id/registerPswEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registerEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_label_text" />

    <EditText
        android:id="@+id/registerEmailEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/registerDoBtn"
        android:layout_width="120dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/register_doregister_btn_text" />

</LinearLayout>